--- a/cover.css
+++ b/cover.css
@@ -19,6 +19,7 @@ body {
   padding-top:40px;
   height: 100%;
   background-color: #333;
+  color: #fff;
 }
 
 .cover-heading {
@@ -69,4 +70,7 @@ body {
   .masthead-nav {
     float: right;
   }
+}
+.search {
+  color: #000000;
 }
